Fixed build errors. Added scripts for compiling
Signed-off-by: Manohar Vanga <manohar.vanga@gmail.com>

--- a/wbtest/Makefile
+++ b/wbtest/Makefile
@@ -1,5 +1,7 @@
 obj-m += wbtest.o
 
+EXTRA_CFLAGS += -I$(PWD)/../wishbone
+
 #KERNEL_DIR=/lib/modules/$(shell uname -r)/build
 KERNEL_DIR=/home/mvanga/dev/cern/linux/linux-torvalds
 
