--- a/wbtest/Makefile
+++ b/wbtest/Makefile
@@ -1,9 +1,8 @@
+include $(PWD)/../paths.mk
+
 obj-m += wbtest.o
 
 EXTRA_CFLAGS += -I$(PWD)/../wishbone
-
-#KERNEL_DIR=/lib/modules/$(shell uname -r)/build
-KERNEL_DIR=/home/mvanga/dev/cern/linux/linux-torvalds
 
 all:
 	make -C $(KERNEL_DIR) M=$(PWD) modules
