--- a/simulation/Makefile
+++ b/simulation/Makefile
@@ -7,7 +7,7 @@ LINUX ?= $(HOME)/linux-for-wbonesim
 export WISHBONE_DIR ?= $(shell /bin/pwd)
 EXTRA_CFLAGS := -I$(WISHBONE_DIR)/include
 
-obj-m = wb.o fakedac.o fakeadc.o fakespec.o 
+obj-m = wishbone.o fakedac.o fakeadc.o fakespec.o 
 
 all:
 	make -C $(LINUX) M=$(shell /bin/pwd) modules
