simulation: cleaned up fake_wb_bus driver
The new driver does not use the messy 1-probe hack that was
being used earlier with PCI. The new driver registers a dummy
device and proceeds to request firmware for it.

Signed-off-by: Manohar Vanga <manohar.vanga@gmail.com>

--- a/simulation/Makefile
+++ b/simulation/Makefile
@@ -7,7 +7,7 @@ LINUX ?= $(HOME)/linux-for-wbonesim
 export WISHBONE_DIR ?= $(shell /bin/pwd)
 EXTRA_CFLAGS := -I$(WISHBONE_DIR)/include
 
-obj-m = wishbone.o fakedac.o fakeadc.o fakespec.o 
+obj-m = wishbone.o fakedac.o fakeadc.o fake_wb_bus.o 
 
 all:
 	make -C $(LINUX) M=$(shell /bin/pwd) modules
