the current dir is $(obj) while compiling

--- a/simulation/Makefile
+++ b/simulation/Makefile
@@ -4,8 +4,7 @@
 LINUX ?= $(HOME)/linux-for-wbonesim
 
 # temporarily, use local <linux/wishbone.h>
-export WISHBONE_DIR ?= $(shell /bin/pwd)
-EXTRA_CFLAGS := -I$(WISHBONE_DIR)/include
+EXTRA_CFLAGS := -I$(obj)/include
 
 obj-m = wishbone.o fakedac.o fakeadc.o fake_wb_bus.o 
 
