simulation: add warnings to firmware makefile
Signed-off-by: Manohar Vanga <manohar.vanga@cern.ch>

--- a/simulation/fw/Makefile
+++ b/simulation/fw/Makefile
@@ -1,9 +1,9 @@
-CFLAGS += -I../include
+CFLAGS += -I../include -Wall -Wextra
 
 all: wb_cfggen
 
 wb_cfggen: wb_cfggen.o
-	gcc wb_cfggen.o -o wb_cfggen
+	$(CC) $(CFLAGS) wb_cfggen.o -o wb_cfggen
 
 clean:
 	rm -rf wb_cfggen *.o
