simulation: multiple fixes
Fix bugs in release method of device 0.
Change ops to additionally provide bus as argument.
Fix endian issues in bus scanning

Signed-off-by: Manohar Vanga <manohar.vanga@cern.ch>

--- a/simulation/Makefile
+++ b/simulation/Makefile
@@ -1,7 +1,10 @@
 # Trivial top-level Makefile
 
 
-LINUX ?= $(HOME)/linux-for-wbonesim
+#LINUX ?= $(HOME)/linux-for-wbonesim
+CPU?=L865
+KVER?=2.6.24.7-rt27
+LINUX?=/acc/sys/$(CPU)/usr/src/kernels/$(KVER)
 
 # temporarily, use local <linux/wishbone.h>
 EXTRA_CFLAGS := -I$(obj)/include
