simulation: add wishbone driver for onewire + test program
Signed-off-by: Manohar Vanga <manohar.vanga@cern.ch>

--- a/simulation/Makefile
+++ b/simulation/Makefile
@@ -9,7 +9,7 @@ LINUX?=/acc/sys/$(CPU)/usr/src/kernels/$(KVER)
 # temporarily, use local <linux/wishbone.h>
 EXTRA_CFLAGS := -I$(obj)/include
 
-obj-m = wishbone.o fakedac.o fakeadc.o fake_wb_bus.o 
+obj-m = wishbone.o fakedac.o fakeadc.o fake_wb_bus.o wb_onewire.o
 
 all:
 	make -C $(LINUX) M=$(shell /bin/pwd) modules
