simulation: add 1-wire wishbone driver and adc config binary
Signed-off-by: Manohar Vanga <manohar.vanga@cern.ch>

--- a/simulation/Makefile
+++ b/simulation/Makefile
@@ -1,15 +1,11 @@
-# Trivial top-level Makefile
-
-
-#LINUX ?= $(HOME)/linux-for-wbonesim
 CPU?=L865
 KVER?=2.6.24.7-rt27
 LINUX?=/acc/sys/$(CPU)/usr/src/kernels/$(KVER)
 
 # temporarily, use local <linux/wishbone.h>
-EXTRA_CFLAGS := -I$(obj)/include
+EXTRA_CFLAGS := -I$(obj)/include -I$(shell /bin/pwd)/drivers/w1/
 
-obj-m = wishbone.o fakedac.o fakeadc.o fake_wb_bus.o wb_onewire.o
+obj-m = wishbone.o fakedac.o fakeadc.o fake_wb_bus.o wb_onewire.o wb_1wire.o
 
 all:
 	make -C $(LINUX) M=$(shell /bin/pwd) modules
