driver: remove wb_1wire.o from Makefile to prevent compilation errors
Signed-off-by: Manohar Vanga <manohar.vanga@cern.ch>

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -5,7 +5,7 @@ LINUX?=/acc/sys/$(CPU)/usr/src/kernels/$(KVER)
 # temporarily, use local <linux/wishbone.h>
 EXTRA_CFLAGS := -I$(obj)/include -I$(shell /bin/pwd)/drivers/w1/
 
-obj-m = wishbone.o fakedac.o fakeadc.o fake_wb_bus.o wb_1wire.o
+obj-m = wishbone.o fakedac.o fakeadc.o fake_wb_bus.o #wb_1wire.o
 
 all:
 	make -C $(LINUX) M=$(shell /bin/pwd) modules
