pcie-wb: Much hacking to remove baggage from the old driver

--- a/pcie-wb/Makefile
+++ b/pcie-wb/Makefile
@@ -15,9 +15,10 @@
 
 
 
-KERNELDIR ?= /common/usr/embedded/kernel/scu/linux-2.6.33.6/
+KERNELDIR ?= /usr/src/linux-3.2.14 #/common/usr/embedded/kernel/scu/linux-2.6.33.6/
 ifneq ($(KERNELRELEASE),)
-	obj-m	:= pci_char.o sleepy.o
+CFLAGS_pcie_wb.o = -msse2
+	obj-m	:= pcie_wb.o
 else
 	KERNELDIR ?= /lib/modules/$(shell uname -r)/build
 	PWD       := $(shell pwd)
