doc: added sdb.h and an untabify makefile rule
Signed-off-by: Alessandro Rubini <rubini@gnudd.com>

--- a/docs/specification/Makefile
+++ b/docs/specification/Makefile
@@ -1,11 +1,14 @@
 FILE=proposal
 
-all: $(FILE).pdf
+all: $(FILE).pdf 
 
-$(FILE).pdf: $(FILE).tex
+$(FILE).pdf: $(FILE).tex sdb-h.expand
 	latex $(FILE).tex
 	latex $(FILE).tex
 	dvipdfm $(FILE).dvi
 
 clean:
 	rm -rf *.aux *.dvi *.log *.pdf *.toc *.lot *.lof
+
+sdb-h.expand: sdb.h
+	expand -8 $^ > $@
