--- a/docs/specification/Makefile
+++ b/docs/specification/Makefile
@@ -1,11 +1,12 @@
-FILE=proposal
+INPUT = $(wildcard *.tex)
+ALL = $(INPUT:.tex=.pdf)
 
-all: $(FILE).pdf 
+all: $(ALL) 
 
-$(FILE).pdf: $(FILE).tex sdb-h.expand
-	latex $(FILE).tex
-	latex $(FILE).tex
-	dvipdfm $(FILE).dvi
+%.pdf: %.tex sdb-h.expand
+	latex $*.tex
+	latex $*.tex
+	dvipdfm $*.dvi
 
 clean:
 	rm -rf *.aux *.dvi *.log *.pdf *.toc *.lot *.lof
