sdbfs/kernel: added sdb-iomem module
Signed-off-by: Alessandro Rubini <rubini@gnudd.com>

--- a/sdbfs/kernel/Makefile
+++ b/sdbfs/kernel/Makefile
@@ -5,6 +5,7 @@ ccflags-y = -I$M/../include
 
 obj-m = sdbfs.o
 obj-m += sdb-fakedev.o
+obj-m += sdb-iomem.o
 
 sdbfs-y = sdbfs-core.o
 sdbfs-y += sdbfs-file.o
